--- a/build_spec.yml
+++ b/build_spec.yml
@@ -17,58 +17,70 @@ steps:
     onFailure:
       - type: Command
         command: |
-          echo "Handling Failure"
-          echo "Failure successfully handled"
+          echo "Failed to obtain BUILDRUN_HASH"
         timeoutInSeconds: 400
         runAs: root
 
   - type: Command
-    name: "Build Docker image for nginx-webapp"
+    name: "build .NET Webapp"
+    timeoutInSeconds: 40
     command: |
-      docker build -t lhr.ocir.io/apaccpt01/nginx-webapp:latest .
-      echo "run nginx-webapp"
-      docker run -dit -p 5000:5000 --name nginx-webapp lhr.ocir.io/apaccpt01/nginx-webapp:latest
-      echo "run nginx-webapp successfully"
+      cd dotnetwebapp/
+      dotnet publish -c Release
     onFailure:
       - type: Command
         command: |
-          echo "Handing Failure"
-          echo "Failure successfully handled"
+          echo "Failed to build .NET webapp"
         timeoutInSeconds: 400
         runAs: root
+
+#   - type: Command
+#     name: "Build Docker image for nginx-webapp"
+#     command: |
+#       docker build -t lhr.ocir.io/apaccpt01/nginx-webapp:latest .
+#       echo "run nginx-webapp"
+#       docker run -dit -p 5000:5000 --name nginx-webapp lhr.ocir.io/apaccpt01/nginx-webapp:latest
+#       echo "run nginx-webapp successfully"
+#     onFailure:
+#       - type: Command
+#         command: |
+#           echo "Handing Failure"
+#           echo "Failure successfully handled"
+#         timeoutInSeconds: 400
+#         runAs: root
   
-  - type: Command
-    name: "Build Pa11y CI Container for web accessibility testing"
-    command: |
-      echo "Build Pa11y CI image"
-      docker build -t pally-test:latest pa11y-test/.
-      echo "Pa11y CI build completed"
-    onFailure:
-      - type: Command
-        command: |
-          echo "Handing Failure"
-          echo "Failure successfully handled"
-        timeoutInSeconds: 400
-        runAs: root
+#   - type: Command
+#     name: "Build Pa11y CI Container for web accessibility testing"
+#     command: |
+#       echo "Build Pa11y CI image"
+#       docker build -t pally-test:latest pa11y-test/.
+#       echo "Pa11y CI build completed"
+#     onFailure:
+#       - type: Command
+#         command: |
+#           echo "Handing Failure"
+#           echo "Failure successfully handled"
+#         timeoutInSeconds: 400
+#         runAs: root
 
-  - type: Command
-    name: "Execute accessibility test"
-    command: |
-      echo "test endpoint"
-      docker ps -a
-      docker inspect -f '{{range.NetworkSettings.Networks}}{{.IPAddress}}{{end}}' nginx-webapp
-      echo "test endpoint successfully"
-      echo "Execute Pa11y test"
-      docker run pally-test
-    onFailure:
-      - type: Command
-        command: |
-          echo "Handing Failure"
-          echo "Failure successfully handled"
-        timeoutInSeconds: 400
-        runAs: root
+#   - type: Command
+#     name: "Execute accessibility test"
+#     command: |
+#       echo "test endpoint"
+#       docker ps -a
+#       docker inspect -f '{{range.NetworkSettings.Networks}}{{.IPAddress}}{{end}}' nginx-webapp
+#       echo "test endpoint successfully"
+#       echo "Execute Pa11y test"
+#       docker run pally-test
+#     onFailure:
+#       - type: Command
+#         command: |
+#           echo "Handing Failure"
+#           echo "Failure successfully handled"
+#         timeoutInSeconds: 400
+#         runAs: root
 
-outputArtifacts:
-  - name: nginx-webapp-image
-    type: DOCKER_IMAGE
-    location: lhr.ocir.io/apaccpt01/nginx-webapp:latest
+# outputArtifacts:
+#   - name: nginx-webapp-image
+#     type: DOCKER_IMAGE
+#     location: lhr.ocir.io/apaccpt01/nginx-webapp:latest
