--- a/build_spec.yml
+++ b/build_spec.yml
@@ -36,7 +36,7 @@ steps:
         runAs: root
 
   - type: Command
-    name: "build .NET Webapp"
+    name: "Build .NET Webapp"
     command: |
       cd dotnetwebapp/
       dotnet publish -c Release
@@ -52,9 +52,9 @@ steps:
     name: "Build Docker image for .NET webapp"
     command: |
       docker build -t lhr.ocir.io/apaccpt01/dotnet-webapp:latest .
-      echo "run dotnet-webapp"
+      echo "Run dotnet-webapp"
       docker run -dit -p 8080:80 --name dotnet-webapp lhr.ocir.io/apaccpt01/dotnet-webapp:latest
-      echo "run dotnet-webapp successfully"
+      echo "Run dotnet-webapp successfully"
     onFailure:
       - type: Command
         command: |
@@ -94,7 +94,7 @@ steps:
 #         timeoutInSeconds: 400
 #         runAs: root
 
-# outputArtifacts:
-#   - name: nginx-webapp-image
-#     type: DOCKER_IMAGE
-#     location: lhr.ocir.io/apaccpt01/nginx-webapp:latest
+outputArtifacts:
+  - name: dotnet-webapp-image
+    type: DOCKER_IMAGE
+    location: lhr.ocir.io/apaccpt01/dotnet-webapp:latest
