--- a/build_spec.yml
+++ b/build_spec.yml
@@ -105,7 +105,7 @@ steps:
         timeoutInSeconds: 400
         runAs: root
 
-outputArtifacts:
-  - name: dotnet-webapp-image
-    type: DOCKER_IMAGE
-    location: lhr.ocir.io/apaccpt01/dotnet-webapp:${BUILDRUN_HASH}
+# outputArtifacts:
+#   - name: dotnet-webapp-image
+#     type: DOCKER_IMAGE
+#     location: lhr.ocir.io/apaccpt01/dotnet-webapp:${BUILDRUN_HASH}
